<resources>
    <string name="app_name">GithubUserApp</string>

    <string name="nama">Nama Pengguna</string>
    <string name="user_name">Username Pengguna</string>
    <string name="repository">Jumlah Repository</string>
    <string name="followers">Follower</string>
    <string name="following">Following</string>
    <string name="location">Lokasi User</string>
    <string name="company">Company User</string>
    <string name="avatar">Foto Avatar</string>
    <string name="search">Search</string>
    <string name="menu_2">side_menu</string>
    <string name="Repository">Repository</string>

    <string name="searchView">Pencarian</string>
    <string name="search_hint">Search Here...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_follower">Daftar Follower</string>
    <string name="content_following">Daftar Following</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="view_pager">View Pager</string>
    <string name="tablayout">Tab Layout</string>

    <!-- Other string resources-->


</resources>


